--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE CACHE BOOL "" FORCE)
 set(CMAKE_CXX_STANDARD 17)
 
 if(MSVC)
-	set(CMAKE_CXX_FLAGS "-/Wall")
+	set(CMAKE_CXX_FLAGS "/Wall")
 endif()
 
 if(CMAKE_GNU_COMPILER_ID)
